--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,8 @@
     "powershell.codeFormatting.ignoreOneLineBlock": true,
     "json.schemas": [
         {
-            "url": "./schema.json",
+            // "url": "./schema.json",
+            "url": "https://ghproxy.com/https://raw.githubusercontent.com/ScoopInstaller/Scoop/master/schema.json",
             "fileMatch": [
                 "bucket/**/*.json"
             ]
